Fix: task-list add button wraps on Ubuntu Firefox
Also restyles the form fields to make them align better while removing
ineffective CSS rules.

--- a/source/main.css
+++ b/source/main.css
@@ -120,40 +120,34 @@ body {
 
 #add-task-container {
 	width: 700px;
-	display: table;
-	text-align: center;
 	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 #new-task-name {
 	width: 420px;
 	height: 50px;
-	margin-right: 30px;
 	margin-left: 60px;
-	padding-top: 10px;
 	font-size: 210%;
-	size: 20px;
 }
 
 #new-task-count {
 	width: 40px;
 	height: 50px;
-	padding-top: 10px;
 	font-size: 210%;
 	text-align: right;
-	size: 20px;
 }
 
 #add-task-button {
-	height: 60px;
 	width: 70px;
+	height: 60px;
+	margin-right: 10px;
 	font-size: 300%;
 	font-weight: bold;
-	color: black;
-	background-color: rgb(242, 197, 247);
 	border-radius: 15px;
 	border: 3px solid black;
-	margin-left: 50px;
 	outline: none;
 }
 
